<resources>
    <string name="app_name">ZayThelGyi</string>
    <string name="created_by">Created By</string>
    <string name="gp_name">Our Group</string>
    <string name="mingalarpar">Mingalar Par</string>
    <string name="welcome">welcome</string>
    <string name="start_use">start use</string>
    <string name="tocontinue">To Continue</string>
    <string name="user_name">user name</string>
    <string name="shop_name">shop name</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="need_to_add">"jgdlgj dkfjdkf dkj dj dkjs; s;lskdd skdsk jf fjdkjf mkjk kfje  kjfke fjkefj "</string>
    <string name="to_start_add">Start To Add</string>
</resources>