<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashScreenBg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="@id/iv_logo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_gp_logo"
            android:layout_width="@dimen/gp_logo_width"
            android:layout_height="@dimen/gp_logo_width"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="@id/cl_footer"
            app:layout_constraintEnd_toEndOf="@id/cl_footer"
            app:layout_constraintTop_toTopOf="@id/cl_footer"
            />

        <TextView
            android:id="@+id/tv_created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="@id/cl_footer"
            app:layout_constraintEnd_toEndOf="@id/cl_footer"
            app:layout_constraintTop_toBottomOf="@id/iv_gp_logo"
            app:layout_constraintBottom_toBottomOf="@id/cl_footer"
            android:layout_marginTop="@dimen/sc_margin_top_bottom"
            android:layout_marginBottom="@dimen/sc_margin_top_bottom"/>
        <TextView
            android:id="@+id/tv_gp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gp_name"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_created_by"
            app:layout_constraintStart_toStartOf="@id/cl_footer"
            app:layout_constraintEnd_toEndOf="@id/cl_footer"
            app:layout_constraintBottom_toBottomOf="@id/cl_footer"
            android:layout_marginTop="@dimen/sc_margin_top_bottom"
            android:layout_marginBottom="@dimen/sc_margin_top_bottom"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>